# Cours_CI_CD

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  README.md  install-simeis.sh  install_simeis.sh  migroky1.json  migroky4.json  migroky5.json  old.json  simeis-server.conf  simeis-server.service  simeis-server_0.15.5.deb  simeis-server_1.0.0.deb  supervisord.conf
.github/: CODEOWNERS  Dockerfile  dependabot.yml  pull_request_template.md  request.py
.github/ISSUE_TEMPLATE/: issue_template.md  issue_template.yml
.github/workflows/: AutoRelease.yaml  CMakeCheck.yaml  Deploiment.yaml  DevWorkflow.yaml  MatriceCheck.yaml  PR-workflow.yaml  PRworkflow.yaml  PropagateCheck.yaml  PropagateWorkflow.yaml  PushDevWorkflow.yaml  ReleaseWorkflow.yaml  TodoCheck.yaml  auto-release.yaml  build.yml  cargo.yml  cargoCheck.yaml  cargoTest.yaml  dependabot.yaml  dependabot.yml  matrice-check.yaml  pyTest.yaml  quality.yaml  quality.yml  release-workflow.yaml  verificationSource.yaml  verification_source.yaml
client/: Dockerfile  lancher.py
client/newClient/: commun.py  main.py  service.py  station.py
doc/: changelog.json  manual.typ  rapport.md  simeis_man
example/: client.py  lancher.py  test.json  watch_game.py
example/newClient/: commun.py  error.py  main.py  service.py  ship.py  station.py
lib/systemd/system/: simeis-server.service
simeis-data/: Cargo.toml
simeis-data/src/: galaxy.rs  game.rs  lib.rs  player.rs  ship.rs
simeis-data/src/ship/: navigation.rs  resources.rs
simeis-server/: Cargo.toml
simeis-server/src/: api.rs  main.rs
simeis-server_1.0.0/DEBIAN/: control  postinst
simeis-server_1.0.0/etc/systemd/system/: simeis.service
tests/fonctionnels/: commun.py  test_scenario1.py  test_travel.py  test_upgrade_crew.py
